--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </div>
     <div id="song-index"></div>
 
-    <script src="moods.js"></script>
-    <script src="songs.js"></script>
+    <script src="./moods.js"></script>
+    <script src="./songs.js"></script>
     <script>
         const moodButtonsContainer = document.getElementById('mood-buttons');
         const result = document.getElementById('result');
