--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         }
     </style>
 </head>
-<body>
+<body id="background">
     <h1>Postrock Moods</h1>
     <div class="mood-buttons-container">
         <div id="mood-buttons" class="mood-buttons"></div>
@@ -119,14 +119,21 @@
         // 背景画像を更新する関数
         function updateBackground(mood) {
             const query = encodeURIComponent(mood);
-            const url = `https://source.unsplash.com/1600x900/?${query}`;
+            const url = `https://source.unsplash.com/1600x900/?${query}&random=${new Date().getTime()}`;
             
-            // 新しい画像をプリロード
-            const img = new Image();
-            img.src = url;
-            img.onload = function() {
-                document.body.style.backgroundImage = `url('${url}')`;
-            }
+            fetch(url)
+                .then(response => {
+                    if (response.ok) {
+                        return response.url;
+                    }
+                    throw new Error('Network response was not ok.');
+                })
+                .then(imageUrl => {
+                    document.body.style.backgroundImage = `url('${imageUrl}')`;
+                })
+                .catch(error => {
+                    console.error('Error fetching background image:', error);
+                });
         }
 
         // 気分ボタンのクリックイベント
@@ -135,7 +142,7 @@
                 currentMood = event.target.dataset.mood;
                 currentSongIndex = 0;
                 updateSong();
-                updateBackground(moods.find(m => m.id === currentMood).englishName); // 英語の気分名を使用
+                updateBackground(moods.find(m => m.id === currentMood).name); // 気分の名前を使用
             }
         });
 
