--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             padding: 10px 0;
         }
         .mood-button {
-            font-size: 16px;
-            padding: 10px 20px;
+            font-size: 14px; /* ここを16pxから14pxに変更 */
+            padding: 8px 16px; /* パディングも少し調整 */
             cursor: pointer;
             border: none;
             border-radius: 5px;
             background-color: #f0f0f0;
             transition: background-color 0.3s;
-            margin-right: 10px;
+            margin-right: 8px; /* マージンも少し調整 */
         }
         .mood-button:hover {
             background-color: #e0e0e0;
@@ -46,8 +46,8 @@
             margin-top: 20px;
         }
         .nav-button {
-            font-size: 16px;
-            padding: 10px 20px;
+            font-size: 14px; /* ナビゲーションボタンのフォントサイズも変更 */
+            padding: 8px 16px;
             cursor: pointer;
             border: none;
             border-radius: 5px;
@@ -62,7 +62,7 @@
         }
         #song-index {
             margin-top: 10px;
-            font-size: 16px;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -89,6 +89,16 @@
 
         let currentMood = null;
         let currentSongIndex = 0;
+        let shuffledSongs = [];
+
+// Fisher-Yates シャッフルアルゴリズム
+function shuffleArray(array) {
+    for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+    }
+    return array;
+}
 
         // 気分ボタンの生成
         moods.forEach(mood => {
@@ -99,20 +109,20 @@
             moodButtonsContainer.appendChild(button);
         });
 
+
         function updateSong() {
             if (currentMood) {
-                const moodSongs = songs[currentMood];
-                const spotifyUri = moodSongs[currentSongIndex];
+                const spotifyUri = shuffledSongs[currentSongIndex];
                 result.innerHTML = `
                     <iframe src="https://open.spotify.com/embed/track/${spotifyUri.split(':')[2]}" 
                     width="300" height="380" frameborder="0" allowtransparency="true" 
                     allow="encrypted-media"></iframe>
                 `;
-                songIndexSpan.textContent = `${currentSongIndex + 1} / ${moodSongs.length}`;
+                songIndexSpan.textContent = `${currentSongIndex + 1} / ${shuffledSongs.length}`;
                 
                 // ナビゲーションボタンの有効/無効を切り替え
                 prevButton.disabled = currentSongIndex === 0;
-                nextButton.disabled = currentSongIndex === moodSongs.length - 1;
+                nextButton.disabled = currentSongIndex === shuffledSongs.length - 1;
             }
         }
 
@@ -140,9 +150,10 @@
         moodButtonsContainer.addEventListener('click', function(event) {
             if (event.target.classList.contains('mood-button')) {
                 currentMood = event.target.dataset.mood;
+                shuffledSongs = shuffleArray([...songs[currentMood]]); // 曲をシャッフル
                 currentSongIndex = 0;
                 updateSong();
-                updateBackground(moods.find(m => m.id === currentMood).name); // 気分の名前を使用
+                updateBackground(moods.find(m => m.id === currentMood).englishName);
             }
         });
 
